@@ -32,6 +32,7 @@ o In libfreeipmi, add Cipher Suite 18 and 19 information, but do not
   support.
 o In libfreeipmi, support reservation-id registration and clearing in
   the sel-parse sub-library.
+o In libipmimonitoring, support Cipher Suite ID 15, 16, and 17.
  
 Misc
 ----
