@@ -1,3 +1,8 @@
+2012-03-01  Albert Chu <chu11@llnl.gov>
+
+	* libipmimonitoring/, libipmiconsole/: Support Cipher Suite 15,
+	16, and 17.
+
 2012-02-26  Yaroslav Halchenko <debian@onerussian.com>
 
 	* man/ipmi-chassis.8.pre.in: Fix typos.
